--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cloud_firestore: ^4.13.6
   provider: ^6.1.1
   intl: ^0.19.0
+  shared_preferences: ^2.2.2
   flutter_localizations:
     sdk: flutter
 
