--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,7 +61,10 @@ flutter {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:34.3.0')
+    
+    // Firebase SDKs
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
