--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^6.1.2
   intl: ^0.19.0
   shared_preferences: ^2.3.0
+  connectivity_plus: ^6.0.0
   flutter_localizations:
     sdk: flutter
 
